--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.16.3",
+    "resend": "^6.2.2",
     "zod": "^4.1.12"
   },
   "devDependencies": {
